cluster/publicFacing/eng-proj/eng.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eng-deployment
  namespace: eng
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eng
  template:
    metadata:
      labels:
        app: eng
    spec:
      containers:
      - name: eng
        image: codeberg.org/caffeinatedope/eng:latest@sha256:d58a8d93fdd3da56d3e59fb55a16b879187cc642f90c8aea82ec79fe794fe80d # {"$imagepolicy": "eng:eng-imagepolicy"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4321
