cluster/publicFacing/eng-proj/engsvc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: eng-service
  namespace: eng
spec:
  type: LoadBalancer
  selector:
    app: eng
  ports:
  - port: 4322
    targetPort: 4322
